# biblion

./: .gitignore  Cargo.toml  dist-workspace.toml  flake.nix  gradle.properties  justfile  settings.gradle.kts
.github/workflows/: release.yml
android/: AndroidManifest.xml  build.gradle.kts
gradle/: libs.versions.toml
src/: app.rs  lib.rs  main.rs  utils.rs
src/components/: autocomplete.rs  mod.rs  toolbar.rs  verse_panel.rs
src/dialog/: bibles.rs  mod.rs
wix/: main.wxs
