[package]
name = "biblion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
freya = "0.4.0-rc.2"
# freya = { version = "0.4.0-rc.2", path = "../../../contributions/freya/crates/freya/" }
setup_core = { git = "https://github.com/biblionlabs/biblion-service", version = "0.1.0" }
# setup_core = { path = "../service/crates/setup/", version = "0.1.0" }

[target.'cfg(target_os="android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
winit = { version = "0.30.12", features = [
    "android-native-activity",
    "rwh_06",
] }

[features]
default = []
desktop = []

[[bin]]
path = "src/lib.rs"
name = "biblion"
required-features = ["desktop"]
